--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ p{
 
 /* Hero section  */
 #hero {
-    background-image: url("/images/hero-bg.jpg");
+    background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: top center;
     position: relative;
