img path change

--- a/styles/style.css
+++ b/styles/style.css
@@ -151,7 +151,7 @@ p{
     flex-direction: column;
     padding: 20px;
     border-radius: 10px;
-    background-image: url(/images/img-1.jpg);
+    background-image: url(../images/img-1.jpg);
     background-size: cover;
     margin: 10px 5%;
     position: relative;
